--- a/backend/fitness_centre/pom.xml
+++ b/backend/fitness_centre/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>mybatis-plus-jsqlparser</artifactId>
             <version>3.5.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.github.javafaker</groupId>
