--- a/frontend_Vite/package.json
+++ b/frontend_Vite/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-query": "^5.69.0",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^12.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
