--- a/backend/fitness_centre/pom.xml
+++ b/backend/fitness_centre/pom.xml
@@ -137,6 +137,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>  <!-- 示例版本，请根据需要调整 -->
+        </dependency>
+
 
 
         <dependency>
