--- a/frontend_Vite/package.json
+++ b/frontend_Vite/package.json
@@ -18,6 +18,8 @@
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.6.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
