--- a/frontend_Vite/package.json
+++ b/frontend_Vite/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "three": "^0.176.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
