--- a/frontend_Vite/package.json
+++ b/frontend_Vite/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@hookform/resolvers": "^4.1.3",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.69.0",
     "antd": "^5.24.5",
